# glue-etl-pipeline

./: .gitignore  .gitlab-ci.yml  README.md  push_tags.sh  pyproject.toml  test-event.json
athena_sql/: create_events_tables.sql
data_observability/: README.md  docker-compose.yml  export.json
dependencies/: Cerberus-1.3.3-py3-none-any.whl  elasticsearch-7.13.0-py2.py3-none-any.whl  elasticsearch-7.17.0-py2.py3-none-any.whl  headline_event.json  headline_prediction.json  it_event.json  microone_event.json  microone_prediction.json  microthree_event.json  microthree_prediction.json  microtwo_event.json  microtwo_prediction.json  sim_event.json  ste_event.json  ste_prediction.json  summarizer_event.json  summarizer_prediction.json
deployments/: main.tf
docs/: 01_flat_dvaults.rst  02_convert_to_parquet.rst  conf.py  index.rst
dvault-infrastructure/: dvault-infrastructure.tf  s3-cross-replication-configuration.tf  s3-cross-replication-role.tf  shape_synced_bucket_prod.tf  shape_synced_bucket_prod_replicas.tf  shape_synced_buckets.tf  terraform.tfvars  variables.tf
ef_ingestion_etl/: clean_up.py  convert_to_parquet.py  data_profiling.py  flat_dvaults.py  process_logs.py  update_workflow_properties.py
legacy/: README.md  dvault-infrastructure.tf  s3-cross-replication-configuration.tf  s3-cross-replication-role.tf  shape_synced_bucket_prod.tf  shape_synced_bucket_prod_replicas.tf
scripts/: build_lambda_packages.sh  build_lambdas.py  lock_em_all.py
shape_dvault_ingestion_etl/: clean_up.py  convert_to_parquet.py  data_profiling.py  flat_dvaults.py  process_logs.py  (+1 more)
(+295 files in other folders)
