[tool.poetry]
name = "shape-dvault"
version = "0.1.0"
description = "Shape dvault ETL pipeline"
authors = ["francesco.gastaldello <francesco.gastaldello@docebo.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
pylint = "^2.12.2"
Sphinx = "^4.3.2"
coverage = "^6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
