[tool.poetry]
name = "shape-dvault"
version = "0.1.0"
description = "Shape dvault ETL pipeline"
authors = ["Francesco Gastaldello <francesco.gastaldello@docebo.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
Sphinx = "^4.3.2"
black = "^21.12b0"
Cerberus = "1.3.3"
awscli = "^1.22.37"
boto3 = "^1.20.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
